@@ -56,8 +56,6 @@ jobs:
           - emoji: 🪟
             runs-on: [windows-latest]
         python:
-          - name: CPython 3.7
-            runs-on: "3.7"
           - name: CPython 3.8
             runs-on: "3.8"
           - name: CPython 3.9
