@@ -8,6 +8,6 @@ from typing import Any, Dict, Optional
 class ScreenShotError(Exception):
     """Error handling class."""
 
-    def __init__(self, message: str, details: Optional[Dict[str, Any]] = None) -> None:
+    def __init__(self, message: str, /, *, details: Optional[Dict[str, Any]] = None) -> None:
         super().__init__(message)
         self.details = details or {}
